--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
         <version>2.2.2.RELEASE</version>
         <relativePath/>
     </parent>
-    <groupId>org.example</groupId>
-    <artifactId>untitled</artifactId>
+    <groupId>org.kendo</groupId>
+    <artifactId>springboot-guide</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
