--- a/springboot-jpa/src/main/resources/application.properties
+++ b/springboot-jpa/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/world?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.initialization-mode=always
+spring.datasource.continue-on-error=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.springframework.web=INFO
