--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>springboot-jpa</module>
         <module>springboot-knowledge</module>
+        <module>springboot-jdbc</module>
     </modules>
 
 
