--- a/springboot-jdbc/pom.xml
+++ b/springboot-jdbc/pom.xml
@@ -9,15 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springboot-knowledge</artifactId>
-
-    <name>springboot-knowledge</name>
-    <description>Base knowledge for Spring Boot</description>
+    <artifactId>springboot-jdbc</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
         </dependency>
 
         <dependency>
@@ -41,5 +42,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
