--- a/springboot-jpa/pom.xml
+++ b/springboot-jpa/pom.xml
@@ -3,12 +3,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>untitled</artifactId>
-        <groupId>org.example</groupId>
+        <artifactId>springboot-guide</artifactId>
+        <groupId>org.kendo</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+
     <artifactId>springboot-jpa</artifactId>
+
     <name>springboot-jpa</name>
 
     <dependencies>
