--- a/springboot-jdbc/src/main/resources/application.properties
+++ b/springboot-jdbc/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/world?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.initialization-mode=never
+spring.datasource.schema=schema.sql
+spring.datasource.data=data.sql
 spring.datasource.hikari.allow-pool-suspension=true
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
