--- a/springboot-mybatis/pom.xml
+++ b/springboot-mybatis/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.0</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -32,6 +32,11 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
