--- a/springboot-jpa/src/main/resources/application.properties
+++ b/springboot-jpa/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/world?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/world?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=never
 spring.datasource.continue-on-error=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-logging.level.org.springframework.web=INFO
+logging.level.org.springframework=error
 logging.level.org.hibernate=ERROR
 logging.level.com.kendo=DEBUG
 spring.devtools.restart.enabled=true
