--- a/springboot-webmvc/src/main/resources/application.properties
+++ b/springboot-webmvc/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=20MB
 spring.servlet.multipart.file-size-threshold=5MB
+spring.messages.basename=messages
+spring.messages.cache-duration=-1
+spring.messages.encoding=UTF-8
+spring.messages.fallback-to-system-locale=true
