--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mybatis?characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/mybatisdb?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.initialization-mode=never
