--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
 spring.datasource.hikari.connection-timeout=45000
 mybatis.type-aliases-package=com.kendo.domain
 mybatis.mapper-locations=classpath*:com/kendo/mapper/*xml
+mybatis.configuration.local-cache-scope=session
