--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -9,4 +9,7 @@ spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
 spring.datasource.hikari.connection-timeout=45000
 mybatis.type-aliases-package=com.kendo.domain
 mybatis.mapper-locations=classpath*:com/kendo/mapper/*xml
+# 设置 mybatis 一级缓存的缓存级别,默认为 session
 mybatis.configuration.local-cache-scope=session
+logging.level.root=warn
+logging.level.org.mybatis=debug
