--- a/springboot-webmvc/src/main/resources/application.properties
+++ b/springboot-webmvc/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# 注册 CharacterEncodingFilter
+spring.http.encoding.enabled=true
+spring.http.encoding.charset=utf-8
+#spring.mvc.hiddenmethod.filter.enabled=false
+#spring.mvc.formcontent.filter.enabled=false
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=20MB
