--- a/springboot-rest/src/main/resources/application.properties
+++ b/springboot-rest/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=80
 server.servlet.context-path=/rest
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/world?useSSL=false&characterEncoding=UTF8
+spring.datasource.url=jdbc:mysql://localhost:3306/mybatisdb?useSSL=false&characterEncoding=UTF8
 spring.datasource.username=root
 spring.datasource.password=root
-spring.data.rest.basePath=/api
+#spring.data.rest.basePath=/api
 logging.level.org.springframework=ERROR
