--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -13,3 +13,4 @@ mybatis.mapper-locations=classpath*:com/kendo/mapper/*xml
 mybatis.configuration.local-cache-scope=session
 logging.level.root=warn
 logging.level.org.mybatis=debug
+logging.level.com.kendo=info
