--- a/springboot-webmvc-war/pom.xml
+++ b/springboot-webmvc-war/pom.xml
@@ -29,6 +29,13 @@
             <!-- 打包时不打包tomcat相关jar -->
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
