--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>springboot-security</module>
         <module>springboot-multi-profiles</module>
         <module>springboot-webmvc-war</module>
+        <module>springboot-properties-mapping</module>
     </modules>
 
 </project>
