--- a/springboot-properties-mapping/pom.xml
+++ b/springboot-properties-mapping/pom.xml
@@ -8,23 +8,18 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>springboot-webmvc-war</artifactId>
-    <packaging>war</packaging>
-    <description>Packing Spring Boot application for war</description>
-
+    <artifactId>springboot-properties-mapping</artifactId>
+    <description>How to mapping the properties to a Bean</description>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
