--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>springboot-multi-profiles</module>
         <module>springboot-webmvc-war</module>
         <module>springboot-properties-mapping</module>
+        <module>soringboot-druid</module>
     </modules>
 
 </project>
