--- a/soringboot-druid/src/main/resources/application.yml
+++ b/soringboot-druid/src/main/resources/application.yml
@@ -1,7 +1,14 @@
-
+server:
+  port: 80
+  servlet:
+    context-path: /springboot4druid
+  tomcat:
+    uri-encoding: utf-8
+    max-threads: 100
+    min-spare-threads: 2
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mybatisdb
+    url: jdbc:mysql://localhost:3306/mybatisdb?useSSL=false&useUnicode=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=utf-8
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
@@ -23,6 +30,3 @@ spring:
       filters: stat
       connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
       use-global-data-source-stat: true
-server:
-  servlet:
-    context-path: /springboot4druid
